# ecom-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  big_query_runner.py  main.py  pyproject.toml  requirements.txt
config/: app-config.yaml  config.yaml
src/: main.py
src/config/: app_config_loader.py  config_loader.py  env_config.py
src/graph/: __init__.py  agent.py  build.py  runner.py  state.py
src/graph/nodes/: __init__.py  analyze.py  analyzing_node.py  base_node.py  data_retrieval_node.py  dry_run.py  execute.py  plan.py  plan_sql.py  repair_sql.py  route.py  run_sql.py  sql_generate.py  summarize.py  summarizing_node.py
src/graph/prompts/: analyze.md  analyzing.md  data_retrieval.md  plan.md  repair.md  sql_gen.md  summarize.md  summarizing.md  system.md
src/graph/tools/: bigquery.py  python_tool.py
src/services/: __init__.py  big_query_runner.py  llm.py
tests/: unit-tests.py
